--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
 .App {
-  text-align: center;
+    @apply py-8 px-6 flex flex-col gap-4 bg-gray-50 text-gray-500 dark:bg-gray-800 dark:text-gray-400 min-h-full transition-all duration-300;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Text */
+h1 {
+    @apply text-3xl font-bold text-gray-800 dark:text-gray-100;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+    @apply text-xl font-bold text-gray-600 dark:text-gray-300;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+    @apply text-sm text-gray-500 dark:text-gray-400 py-2;
 }
 
-.App-link {
-  color: #61dafb;
+/* Table */
+.table table {
+    @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 mb-4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table tr:nth-child(even) {
+    @apply bg-transparent dark:border-gray-700;
+}
+.table tr {
+    @apply bg-gray-100 border-b  dark:bg-gray-900 dark:border-gray-700 hover:bg-gray-200 dark:hover:bg-gray-700 cursor-pointer;
+}
+.table th,
+.table td {
+    @apply py-3 px-6;
+}
+
+/* Bar Chart */
+.bar-chart {
+    @apply text-xs table-fixed text-center w-full mt-2;
+}
+.bar-chart tr:nth-child(1) td {
+    @apply align-bottom h-[20vh] sm:h-[30vh];
+}
+
+.bar-chart .bar {
+    @apply bg-slate-500 dark:bg-slate-300 pt-1 origin-bottom;
+    animation: grow 1s ease-in-out forwards;
+}
+
+.bar-chart .name {
+    @apply pt-2;
+}
+
+.bar-chart .label {
+    @apply inline-flex items-center justify-center bg-gray-300 dark:bg-gray-900 relative -top-2 h-7 w-7 text-gray-900 dark:text-white font-bold rounded-full cursor-pointer select-none hover:bg-gray-500 hover:text-white dark:hover:bg-gray-700 duration-300;
+    animation: fade 1s ease-in-out forwards;
+}
+
+/* Animation */
+@keyframes grow {
+    from {
+        transform: scaleY(0);
+    }
+    to {
+        transform: scaleY(1);
+    }
+}
+@keyframes fade {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
