--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     @apply py-8 px-6 flex flex-col gap-4 bg-gray-50 text-gray-500 dark:bg-gray-800 dark:text-gray-400 min-h-full transition-all duration-300;
 }
 
+.App > div:last-child {
+    @apply flex flex-col flex-grow;
+}
+
 /* Text */
 header {
     @apply text-3xl font-bold text-gray-800 dark:text-gray-100;
@@ -33,10 +37,18 @@ p {
 
 /* Bar Chart */
 .Chart {
-    @apply text-xs table-fixed text-center w-full mt-2;
+    @apply text-xs table-fixed text-center w-full mt-2 flex-grow basis-48 h-0;
 }
 .Chart tr:nth-child(1) td {
-    @apply align-bottom h-[20vh] sm:h-[30vh];
+    @apply align-bottom basis-full;
+}
+
+.Chart .bars, .Chart .bars td {
+    @apply h-full;
+}
+
+.Chart .bars .container {
+    @apply flex flex-col h-full justify-end;
 }
 
 .Chart .bar {
@@ -49,7 +61,7 @@ p {
 }
 
 .Chart .label {
-    @apply inline-flex items-center justify-center bg-gray-300 dark:bg-gray-900 relative -top-2 h-7 w-7 text-gray-900 dark:text-white font-bold rounded-full cursor-pointer select-none hover:bg-gray-500 hover:text-white dark:hover:bg-gray-700 duration-300;
+    @apply inline-flex items-center justify-center bg-gray-300 dark:bg-gray-900 relative -top-2 h-7 w-7 text-gray-900 dark:text-white font-bold rounded-full cursor-pointer select-none hover:bg-gray-500 hover:text-white dark:hover:bg-gray-700 duration-300 self-center;
     animation: fade 1s ease-in-out forwards;
 }
 
